# szyProject

./: build.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: app-release.apk  output.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-jni-lib.cpp  native-lib.cpp
app/src/main/res/drawable/: anim_png_xml.xml  bg_corners.xml  bg_home_search_bar_transparent.xml  button_login.xml  edittext_invitation_code.xml  et_focused.xml  et_normal.xml  invite_text_cancel.xml  test_bg_edittext.xml  test_cb_selector.xml  test_im2_audio_animation_left_list.xml  test_im2_audio_animation_right_list.xml  test_im2_selector_ctype_file.xml  test_im2_selector_ctype_image.xml  test_im2_selector_ctype_location.xml  test_im2_selector_ctype_video.xml  test_im2_shape_session_btn_voice.xml  test_member_club.xml  test_my_middle_selector.xml  test_rl_picture.xml  test_rl_picture_two.xml  test_user_clob_value.xml
app/src/main/res/layout/: activity_about.xml  activity_chat.xml  activity_choose_activity.xml  activity_danmu_main.xml  activity_down_load_test.xml  activity_home.xml  activity_jiaozi_video.xml  activity_jmessage_test.xml  activity_login.xml  activity_login_call.xml  activity_main.xml  activity_main_call.xml  activity_main_rv.xml  activity_mvvm.xml  activity_new_mvvm.xml  activity_password_forget.xml  activity_password_reset.xml  activity_payee.xml  (+124 more)
app/xiaomi/release/: output.json
gradle/wrapper/: gradle-wrapper.properties
umeng/: proguard-umeng.pro
umeng/src/main/: AndroidManifest.xml
(+977 files in other folders)
